--- a/index.html
+++ b/index.html
@@ -32,6 +32,15 @@
       height: 100%;
       border: none;
     }
+    
+    @media (max-width: 767.98px) {
+      .sidebar {
+        display: none; /* Oculta la barra lateral en dispositivos móviles */
+      }
+      .content {
+        margin-left: 0; /* Elimina el margen izquierdo en dispositivos móviles */
+      }
+    }
   </style>
 </head>
 <body>
