--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Blog</title>
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -31,15 +31,6 @@
       width: 100%;
       height: 100%;
       border: none;
-    }
-    
-    @media (max-width: 767.98px) {
-      .sidebar {
-        display: none; /* Oculta la barra lateral en dispositivos móviles */
-      }
-      .content {
-        margin-left: 0; /* Elimina el margen izquierdo en dispositivos móviles */
-      }
     }
   </style>
 </head>
